--- a/index.html
+++ b/index.html
@@ -1,232 +1,189 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="x-ua-compatible" content="IE-edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="杨一涛-前端工程师-个人简历">
-  <link rel="stylesheet" href="./font-awesome-4.5.0/css/font-awesome.css">
-  <link rel="icon" href="/favicon.ico">
-  <link rel="stylesheet" href="css/master.css" type="text/css">
-  <title>杨一涛-个人简历</title>
+    <title>Draco by @afnizarnur</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Draco is free PSD &amp; HTML template by @afnizarnur">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/kube.min.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/custom.min.css" />
+    <link rel="shortcut icon" href="img/favicon.png" />
+	<link href='https://fonts.googleapis.com/css?family=Playfair+Display+SC:700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<style>
+		.intro h1:before {
+			/* Edit this with your name or anything else */
+			content: '杨一涛';
+		}
+	</style>
 </head>
-
 <body>
-  <div class="mainBody">
-    <header>
-      <div id="logo" class="only-screen">=CHL</div>
-      <div class="null_screen only-screen"></div>
-      <h1 id="bigName">杨一涛
-        <small>/个人简历</small>
-      </h1>
-      <div class="null_print only-print"></div>
-      <div class="online only-print">在线简历：
-        <a href="https://hi-hi.cn/chlresume/">https://hi-hi.cn/chlresume/</a>
-      </div>
-    </header>
-    <div class="content">
-      <div class="term" id="">
-        <h3>
-          <div class="icon">
-            <span class="line"></span>
-            <i class="fa fa-thumbs-o-up"></i>
-          </div>
-          <div class="title">意向职位</div>
-        </h3>
-        <div class="main">
-          <p class="emphasis">
-            <i class="fa fa-thumbs-o-up  only-print"></i>前端工程师</p>
-        </div>
-      </div>
-      <div class="term" id="information">
-        <h3>
-          <div class="icon">
-            <span class="line"></span>
-            <i class="fa fa-info"></i>
-          </div>
-          <div class="title">基本信息</div>
-        </h3>
-        <div class="main">
-          <ul>
-            <li>
-              <i class="fa fa-leaf "></i>
-              <span class="bold">个人信息：</span>
-              <span> 杨一涛 | 男 | 1997年 | 2020年6月毕业 | 华中农业大学 | 广告学 | 武汉 </span>
-            </li>
-            <li>
-              <i class="fa fa-leaf "></i>
-              <span class="bold">自评：</span>
-              <span> Pursue beauty, Approach beauty, Achieve beauty </span>
-            </li>
-            <li class="skill">
-              <i class="fa fa-leaf "></i>
-              <span class="bold">技能：</span>
-              <span>HTML | CSS | React | Redux | TypeScript | Webpack | Git</span>
-            </li>
-            <li>
-              <i class="fa fa-leaf "></i>
-              <span class="bold">GitHub / Blog：</span>
-              <span>
-                <a href="https://github.com/caohuilin" rel="noopener" target="_blank"> github.com/caohuilin </a>/
-                <a href="https://blog2017.hi-hi.cn/" rel="noopener" target="_blank"> 个人博客 </a>
-              </span>
-            </li>
+	<!-- Navigation -->
+	<div class="main-nav">
+		<div class="container">
+			<header class="group top-nav">
+				<div class="navigation-toggle" data-tools="navigation-toggle" data-target="#navbar-1">
+				    <span class="logo">DRACO</span>
+				</div>
+			    <nav id="navbar-1" class="navbar item-nav">
+				    <ul>
+				        <li class="active"><a href="#about">关于我</a></li>
+				        <li><a href="#experiences">技能</a></li>
+				        <li><a href="#achievements">所学课程</a></li>
+				        <li><a href="#skills">项目</a></li>
+				    </ul>
+				</nav>
+			</header>
+		</div>
+	</div>
 
-          </ul>
-        </div>
-      </div>
-      <div class="term" id="skill">
-        <h3>
-          <div class="icon">
-            <span class="line"></span>
-            <i class="fa fa-gears"></i>
-          </div>
-          <div class="title">技能清单</div>
-        </h3>
-        <div class="main">
-          <ul>
-            <li>
-              <i class="fa fa-hand-o-right "></i>
-              <span class="bold"> HTML / CSS：</span>
-              <ul class="con">
-                <li>
-                  <i class="fa fa-star-o "></i>能够编写语义化的 HTML，模块化的 CSS</li>
-                <li>
-                  <i class="fa fa-star-o "></i>能够使用 Flexbox 实现比较复杂的布局，使用 CSS3 实现复杂的动画</li>
-                <li>
-                  <i class="fa fa-star-o "></i>能够使用 Less 高效编写 CSS</li>
-                <li>
-                  <i class="fa fa-star-o "></i>对浏览器 DOM 加载和渲染有较好理解</li>
-              </ul>
-            </li>
-            <li>
-              <i class="fa fa-hand-o-right "></i>
-              <span class="bold"> TypeScript / JavaScript: </span>
-              <ul class="con">
-                <li>
-                  <i class="fa fa-star-o "></i>熟悉 TypeScript、ES6，了解如何在项目中集成其工具链</li>
-                <li>
-                  <i class="fa fa-star-o "></i>熟悉 Promise、Generator、Async/Await 等高级特性</li>
-              </ul>
-            </li>
-            <li>
-              <i class="fa fa-hand-o-right "></i>
-              <span class="bold"> React / Redux: </span>
-              <span>能熟练使用 React、Redux 生态圈构建单页 Web 应用</span>
-            </li>
-            <li>
-              <i class="fa fa-hand-o-right "></i>
-              <span class="bold"> Bootstrap / AntD：</span>
-              <span>可以使用 Bootstrap、Ant Designc 快速开发响应式布局</span>
-            </li>
-            <li>
-              <i class="fa fa-hand-o-right "></i>
-              <span class="bold"> 构建工具：</span>
-              <span>能够使用 Webpack / Gulp 进行前端工程的构建</span>
-            </li>
-            <li>
-              <i class="fa fa-hand-o-right "></i>
-              <span class="bold"> 敏捷开发：</span>
-              <span>能够熟练使用 rebase、cherry-pick 等 Git 命令，了解 CI、CD 流程</span>
-            </li>
-            <li>
-              <i class="fa fa-hand-o-right "></i>
-              <span class="bold"> 其他：</span>
-              <span>GPA 3.7 / 4.0，踏实肯干，喜欢钻研，良好的沟通能力、领导能力</span>
-            </li>
-          </ul>
-        </div>
-      </div>
+	<!-- Introduction -->
+	<div class="intro section" id="about">
+		<div class="container">
+			<p>Hi,我叫杨一涛,我是前端工程师</p>
+			<div class="units-row units-split wrap">
+				<div class="unit-20">
+					<img src="img/ava.jpg" alt="Avatar">
+				</div>
+				<div class="unit-80">
+					<h1>我在<br><span id="typed"></span></h1>
+				</div>
+			
+			</div>
+		</div>
+	</div>
+
+	<!-- Work Experience -->
+	<div class="work section second" id="experiences">
+		<div class="container">
+			<h1>技能</h1>
+
+			<ul class="skill-list list-flat">
+					<li>外语</li>
+					<li>通过英语六级 无障碍阅读国外技术文档 </li>
+				</ul>
+			<ul class="skill-list list-flat">
+				<li>掌握Javascript</li>
+				<li>closure 原型链 继承 常用的ES6新语法 promise等 </li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>计算机网络</li>
+				<li>HTTP TCP IP 常见的XSS CSRF攻击等</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>框架</li>
+				<li>熟悉React 搭建过react项目</li>
+			</ul>
+
+			<ul class="skill-list list-flat">
+
+			<li>
+				熟练掌握AJAX技术以及模板引擎与后台进行数据的交互，实现异步通信以及数据的渲染和页面的部分刷新，
+				深入理解JSONP跨域的原理以及使用JSONP和CORS与服务器代理等方式实现跨域问题，掌握JSON的语法数据交换格式。
+			</li>
 
 
-      <div class="term" id="project">
-        <h3>
-          <div class="icon">
-            <span class="line"></span>
-            <i class="fa fa-leanpub"></i>
-          </div>
-          <div class="title">个人项目展示</div>
-        </h3>
-        <div class="main">
-          <ul>
 
-            <li>
-              <div class="heading">
-                <div class="bold">
-                  <i class="fa fa-tag "></i>基于 Web 平台的阅读 App：</div>
-                <div class="null"></div>
-                <div class="demo">
-                  <a href="https://qs.hi-hi.cn/mangage-book-app-2017-03-15.mp4" rel="noopener" target="_blank">
-                    <i class="fa fa-paperclip "></i>Demo</a>
-                </div>
-                <div class="source">
-                  <a href="https://github.com/caohuilin/GraduationDesign" rel="noopener" target="_blank">
-                    <i class="fa fa-link "></i>源代码
-                  </a>
-                </div>
-              </div>
-              <ul class="con">
-                <li>
-                  <i class="fa fa-check-square "></i>基于 React、Redux、Typescript 技术栈</li>
-                <li>
-                  <i class="fa fa-check-square "></i>使用 CSS3 Transition 和 React Motion 实现了高性能的手指跟随翻页动画</li>
-              </ul>
-            </li>
+			</ul>
 
-            <li>
-              <div class="heading">
-                <div class="bold">
-                  <i class="fa fa-tag "></i>网页版贪吃蛇小游戏：</div>
-                <div class="null"></div>
+			<ul class="skill-list list-flat">
 
-                <div class="demo">
-                  <a href="https://caohuilin.github.io/Snake_React_v2/" rel="noopener" target="_blank">
-                    <i class="fa fa-paperclip "></i>Demo
-                  </a>
-                </div>
-                <div class="source">
-                  <a href="https://github.com/caohuilin/Snake_React_v2" rel="noopener" target="_blank">
-                    <i class="fa fa-link "></i>源代码
-                  </a>
-                </div>
-              </div>
-              <ul class="con">
-                <li>
-                  <i class=" fa fa-check-square"></i>掌机设计风格，帮你找回童年记忆</li>
-                <li>
-                  <i class=" fa fa-check-square"></i>基于 React、Redux、Immutable 技术栈</li>
-                <li>
-                  <i class=" fa fa-check-square"></i>实现传统和穿墙两种游戏模式，支持键盘操作和屏幕按键操作</li>
-              </ul>
+					<li>
+							熟练使用HTML、CSS、JavaScript等前端技术，
+							能够熟练使用DIV+CSS进行页面布局，实现更具语义化的网页。
+					</li>
+		
+		
+		
+					</ul>
 
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="copyright only-screen">
-      <p>Copyright 2019 @
-        <span>杨一涛</span>
-      </p>
-      <a class="copyright-download" href="https://qs.hi-hi.cn/%E6%9B%B9%E6%85%A7%E7%90%B3-20170316.pdf" rel="noopener" target="_blank">PDF 下载</a>
-      <div class="wechat">
-        <i class="fa fa-weixin"></i>
-        <div class='wechatPage'>
-          <img src="./static/wechat.png" alt="" />
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="download only-screen">
-    <ul>
-      <li>
-        <a href="https://qs.hi-hi.cn/%E6%9B%B9%E6%85%A7%E7%90%B3-20170316.pdf" rel="noopener" target="_blank">PDF 下载</a>
-      </li>
-      <li>
-        <a href="https://github.com/caohuilin/Resume" rel="noopener" target="_blank">源码</a>
-      </li>
-    </ul>
-  </div>
+
+
+
+		</div>
+	</div>
+
+	<!-- Award & Achievements -->
+	<div class="award section second" id="achievements">
+		<div class="container">
+			<h1> <br>项目经历</h1>
+			<ul class="award-list list-flat">
+				<li>January 2014</li>
+				<li>Attained PHP5 certification</li>
+				<li>Hold world/Olympic record</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>December 2014</li>
+				<li>Audited X number of clients in only Y amount of time</li>
+				<li>Held a perfect attendance record</li>
+				<li>Were promoted after only X months in the role</li>
+			</ul>
+			<ul class="award-list list-flat">
+				<li>March 2014</li>
+				<li>Placed employees at X companies</li>
+				<li>United multiple teams post-merger</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- Technical Skills -->
+	<div class="skills section second" id="skills">
+		<div class="container">
+			<h1>Technical<br>Skills</h1>
+			<ul class="skill-list list-flat">
+				<li>Web Technology</li>
+				<li>HTML / CSS / SASS / PHP / Javascript</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Database</li>
+				<li>MySQL / MongoDB / Oracle / Access</li>
+			</ul>
+			<ul class="skill-list list-flat">
+				<li>Framework</li>
+				<li>Laravel / CodeIgniter / Zend / Ruby On Rails</li>
+			</ul>
+		</div>
+	</div>
+
+	<!-- Quote -->
+	<div class="quote">
+		<div class="container text-centered">
+			<h1>She was still too young to know that life never gives anything for nothing, and that a price is always exacted for what fate bestows.</h1>
+		</div>
+	</div>
+
+	<footer>
+		<div class="container">
+			<div class="units-row">
+			    <div class="unit-50">
+			    	<p>Handcrafted by Afnizar Nur Ghifari</p>
+			    </div>
+			    <div class="unit-50">
+					<ul class="social list-flat right">
+						<li><a href="mailto:afnizarhilmi@gmail.com"><i class="fa fa-send"></i></a></li>
+						<li><a href="http://twitter.com/afnizarnur"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="http://dribbble.com/afnizarnur"><i class="fa fa-dribbble"></i></a></li>
+						<li><a href="http://behance.com/afnizarnur"><i class="fa fa-behance"></i></a></li>
+					</ul>
+			    </div>
+			</div>
+		</div>
+	</footer>
+
+	<!-- Javascript -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/typed.min.js"></script>
+    <script src="js/kube.min.js"></script>
+    <script src="js/site.js"></script>
+    <script>
+		function newTyped(){}$(function(){$("#typed").typed({
+		// Change to edit type effect
+		strings: ["华中农业大学", "湖北武汉", "世界上的任何一个地方"],
+
+		typeSpeed:90,backDelay:700,contentType:"html",loop:!0,resetCallback:function(){newTyped()}}),$(".reset").click(function(){$("#typed").typed("reset")})});
+    </script>
 </body>
-
 </html>
